--- a/home.css
+++ b/home.css
@@ -1,22 +1,19 @@
 body{
     margin: 0;
     color: #333;
-  }
-  
-  .header{
+    }
+.header{
     display: grid;
     grid-template-areas: 'menu search word logo subscribe login';
     grid-template-columns: 0.2fr 0.2fr 0.4fr 4fr 0.3fr 0.3fr;
     grid-gap: 10px;
     border-bottom: 1px solid #e2e2e2;
     padding: 4px 15px 2px;
-  }
-  
-  #profile{
+        }
+#profile{
     display: none;
-  }
-  
-  .header a{
+        }
+.header a{
     text-decoration: none;
     padding-top: 2px;
   }
@@ -216,7 +213,13 @@ body{
     font-family: nyt-franklin, arial, helvetica, sans-serif;
     margin: 0;
   }
-  
+  .frm{
+    width:100%;
+    height:315px;
+  }
+  .wid{
+    width:100%;
+  }
   .main-nav{
     width: 90%;
     margin: auto;
@@ -407,4 +410,3 @@ body{
     grid-template-columns: auto auto auto;
     }
   }
-  
