worked on few points

--- a/home 2.css
+++ b/home 2.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   color: #333;
-  max-width: 100%;
 }
 
 .header {
@@ -15,11 +14,6 @@ body {
 
 #profile {
   display: none;
-}
-
-a {
-  text-decoration: none;
-  color: black;
 }
 
 .header a {
@@ -92,14 +86,14 @@ a {
 
 .image-title > div {
   margin-top: 5px;
-  font: 11px "Libre Franklin", sans-serif;
+  font: 11px 'Libre Franklin', sans-serif;
   letter-spacing: 0.5px;
   color: rgb(167, 166, 166);
 }
 
 .more-head {
   width: 100%;
-  font: 16px "Libre Franklin", sans-serif;
+  font: 16px 'Libre Franklin', sans-serif;
   font-weight: bold;
   padding-bottom: 15px;
 }
@@ -131,109 +125,6 @@ a {
 
 .header .icon {
   padding: 4% 0;
-}
-
-.wrapper {
-  width: 100%;
-  margin: auto;
-}
-
-article > p {
-  width: 600px;
-  font-size: 20px;
-  line-height: 30px;
-  text-align: left;
-  margin-left: auto;
-}
-
-.wrapper > p {
-  width: 600px;
-  font-size: 20px;
-  line-height: 30px;
-  text-align: left;
-  margin: 0 auto 1em auto;
-}
-
-.wrapper-flex {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.wrapper-flex > p {
-  width: 600px;
-  font-size: 20px;
-  line-height: 30px;
-  text-align: left;
-  margin: auto;
-}
-
-.author {
-  margin: auto;
-  text-align: left;
-  width: 600px;
-  line-height: 35px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.science {
-  font: 12px "Libre Franklin", sans-serif;
-  font-weight: bold;
-}
-
-.stories {
-  font: 14px "Libre Franklin", sans-serif;
-  font-style: italic;
-  color: rgb(75, 75, 75);
-}
-
-.signup {
-  width: 600px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  font-family: "Libre Franklin", sans-serif;
-}
-
-.signupbtn {
-  border: 1px solid black;
-  border-radius: 2px;
-  width: 105px;
-  height: 20px;
-  margin: 5px;
-  text-align: center;
-  vertical-align: text-top;
-  padding: 4px;
-  font: 15px "Libre Franklin", sans-serif;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.thanks {
-  font: 14px "Libre Franklin", sans-serif;
-  font-weight: bold;
-  text-align: center;
-  padding: 15px;
-}
-
-.thanks > a {
-  color: #32689b;
-}
-
-.name {
-  font: 14px "Libre Franklin", sans-serif;
-  font-weight: bold;
-}
-
-.name > a {
-  text-decoration: underline;
-  text-decoration-style: dotted;
-}
-
-.date {
-  font: 13px Verdana, sans-serif;
 }
 
 aside {
@@ -296,22 +187,6 @@ aside {
   white-space: nowrap;
   text-decoration: none;
   font-family: nyt-franklin, helvetica, arial, sans-serif;
-}
-
-.index-head {
-  display: flex;
-  margin: 3px 10px 10px 15px;
-  justify-content: space-between;
-}
-
-.index-head > a {
-  color: #32689b;
-  font-size: 12px;
-}
-
-.bottom-article > div > a {
-  text-decoration: underline;
-  color: rgb(150, 150, 150);
 }
 
 .header a:hover {
@@ -581,476 +456,6 @@ figure {
 
 .nav-footer a:hover {
   text-decoration: underline;
-}
-
-h1 {
-  width: 600px;
-  text-align: left;
-  font-style: italic;
-  font-size: 40px;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-}
-
-hr {
-  border-top: 1px solid darkgray;
-  opacity: 0.3;
-}
-
-.p-format {
-  width: 600px;
-  font-size: 20px;
-  line-height: 30px;
-  text-align: left;
-  margin: auto;
-}
-
-.flexer {
-  display: flex;
-  width: 100%;
-}
-
-.caption {
-  font: 14px Arial, Helvetica, sans-serif;
-  color: grey;
-  width: 1200px;
-  margin: auto;
-}
-
-.caption-author {
-  font: 12px Arial, Helvetica, sans-serif;
-  color: rgb(150, 150, 150);
-}
-
-article {
-  width: 100%;
-  margin: auto;
-}
-
-. .img-container {
-  margin: auto;
-  width: 1200px;
-}
-
-.nav-top {
-  top: 0;
-  background-color: #fff;
-  position: fixed;
-  display: flex;
-  margin: auto;
-  align-items: center;
-  width: 100%;
-  max-width: 100%;
-  border-bottom: 1px solid rgb(233, 233, 233);
-  padding: 5px;
-}
-
-#right-nav-container {
-  display: flex;
-  position: relative;
-  float: right;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 10%;
-  max-width: 10%;
-  margin-right: 5%;
-}
-
-#middle-nav-container {
-  font: 24px "ChomskyRegular", cursive;
-  margin: auto;
-  text-align: center;
-  vertical-align: middle;
-}
-
-#left-nav-container {
-  display: flex;
-  position: relative;
-  float: left;
-  width: 14%;
-  max-width: 14%;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-left: 5%;
-}
-
-#hamburguer-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#hamburger {
-  margin-top: 50%;
-  height: 20px;
-  width: 20px;
-  max-width: 20px;
-  display: block;
-  justify-content: center;
-  align-items: center;
-}
-
-.svg {
-  background-color: black;
-  height: 2px;
-  width: 15px;
-  margin: 2px 1px 2px 1px;
-}
-
-.blue-button {
-  border: 1px solid rgb(49, 74, 105);
-  border-radius: 2px;
-  display: inline-block;
-  padding: 8px 8px;
-  margin: 2px 2px;
-  background-color: rgb(88, 122, 167);
-  color: antiquewhite;
-  font: 11px Verdana, Geneva, Tahoma, sans-serif;
-  cursor: pointer;
-}
-
-.main {
-  padding-top: 50px;
-  margin: auto;
-}
-
-.main-content {
-  display: flex;
-  width: 100%;
-  margin: auto;
-}
-
-header {
-  margin: auto;
-}
-
-.header-img {
-  margin: auto;
-  width: 1200px;
-}
-
-.img-wrapper {
-  margin: auto;
-  width: 1200px;
-}
-
-.title-icons {
-  width: 39%;
-  margin: auto;
-}
-
-aside > hr {
-  opacity: 0.8;
-  border-style: dotted;
-}
-
-.thanks > hr {
-  margin: 15px auto;
-  width: 70px;
-}
-
-/* Aside Setup */
-.empty-container {
-  width: 210px;
-  margin-right: auto;
-}
-
-.article-container {
-  width: 600px;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-.pick > a:hover {
-  text-decoration: underline;
-}
-
-.pick-link {
-  display: flex;
-  cursor: pointer;
-  width: auto;
-}
-
-.pick-link > img {
-  margin: 10px;
-  width: 75px;
-  height: 75px;
-}
-
-.bottom-article {
-  font: 11px "Libre Franklin", sans-serif;
-  color: rgb(150, 150, 150);
-  margin: 20px 0% 50px 0%;
-}
-
-.bottom-article > div {
-  width: 600px;
-  margin: 20px auto 20px auto;
-}
-
-.bottom-article > div > a:hover {
-  text-decoration: none;
-}
-
-.button-social {
-  display: flex;
-  width: 600px;
-  justify-content: space-between;
-  height: 36px;
-  margin: 20px 0 20px 0;
-  vertical-align: middle;
-}
-
-.button-social > .icons {
-  color: #333;
-  vertical-align: middle;
-}
-
-.comment-button {
-  text-align: center;
-  width: 330px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border: 1px solid #333;
-  border-radius: 2px;
-  background-color: rgb(88, 122, 167);
-  color: white;
-  font: 12px Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: bold;
-  line-height: 25px;
-}
-
-.inflation {
-  display: block;
-  width: 945px;
-  height: auto;
-  position: relative;
-  margin: auto;
-  padding: 10px;
-}
-
-.inflation-img {
-  width: 945px;
-  height: 576px;
-}
-
-.inflation-header {
-  display: block;
-}
-
-.inflation-header > h2 {
-  text-align: left;
-  font: 18px "Libre Franklin", sans-serif;
-  font-weight: bold;
-  margin-right: auto;
-  margin-bottom: 4px;
-  width: 945px;
-}
-
-.inflation-header > p {
-  text-align: left;
-  font-size: 14px;
-  color: rgb(122, 122, 122);
-  margin: auto;
-  width: 945px;
-}
-
-.inflation-text {
-  opacity: 0.8;
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  row-gap: 150px;
-  column-gap: 50px;
-  position: absolute;
-  width: 985px;
-  bottom: 30px;
-}
-
-.info {
-  font: 12px "Raleway", sans-serif;
-  text-align: left;
-  width: 200px;
-}
-
-.key-word {
-  font-weight: bold;
-  font-size: 10px;
-  margin: 1px;
-}
-
-.inflation-foot {
-  margin: auto;
-  margin-bottom: 50px;
-  font-size: 14px;
-  text-align: left;
-  width: 985px;
-}
-
-.inflation-foot > hr {
-  display: flex;
-  width: 10%;
-  color: black;
-  opacity: 1;
-  margin-left: 0;
-  margin-right: auto;
-}
-
-iframe {
-  margin: auto;
-  width: 600px;
-  height: 315px;
-}
-
-.video-caption {
-  font: 14px Arial, Helvetica, sans-serif;
-  color: grey;
-  margin: auto auto 25px auto;
-  padding-right: 107px;
-  width: 500px;
-}
-
-.spacecosmos {
-  font-family: "Libre Franklin", sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.spacecosmos:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.cosmos-img {
-  width: 720px;
-  height: 481px;
-  margin: auto;
-}
-
-.cosmos {
-  width: 728px;
-  margin: auto;
-}
-
-.cosmos > figcaption {
-  width: 728px;
-  margin-bottom: 25px;
-}
-
-ul {
-  list-style: none;
-}
-
-.pointer {
-  cursor: pointer;
-}
-
-.paragraph-link {
-  text-decoration: underline;
-  color: #32689b;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.index {
-  display: block;
-  margin: auto;
-  width: 1200px;
-}
-
-.index > hr {
-  height: 2px;
-  border-top: 2px solid rgb(167, 167, 167);
-  border-bottom: 1px solid rgb(167, 167, 167);
-}
-
-.index-head > svg {
-  height: 25px;
-}
-
-.suscribe {
-  width: 200px;
-  border-left: 1px solid rgb(219, 219, 219);
-  padding-left: 15px;
-}
-
-.index-list {
-  display: flex;
-  margin: 0 10px 10px 15px;
-  text-align: left;
-  justify-content: space-between;
-}
-
-.index-links {
-  display: flex;
-  text-decoration: none;
-  font: 13px "Roboto", sans-serif;
-  cursor: pointer;
-}
-
-.index-titles {
-  font: 13px "Roboto", sans-serif;
-  font-weight: bold;
-}
-
-.list-style {
-  list-style: none;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  white-space: nowrap;
-}
-
-.svgs {
-  font-size: 12px;
-  width: 13px;
-  height: 14px;
-  font-weight: bold;
-  margin: 10px 0;
-}
-
-.css-r5ic95 {
-  width: 13px;
-  height: 14px;
-  font-weight: bold;
-  margin-right: 5px;
-}
-
-.footer-links {
-  color: rgb(167, 167, 167);
-  text-decoration: none;
-}
-
-.footer-links:hover {
-  text-decoration: underline;
-}
-
-.sub-nav {
-  bottom: 0;
-  left: 0;
-  background-color: #fff;
-  position: fixed;
-  display: flex;
-  width: 100%;
-  max-width: 100%;
-  border-top: 1px solid #333;
-  padding: 5px;
-  height: 35px;
-  margin: auto;
-}
-
-.subscription {
-  margin: auto auto auto 42%;
-}
-
-.exp-button {
-  margin: auto 300px auto auto;
-  font-family: "Dela Gothic One", cursive;
-  font-weight: bold;
-  font-size: 12px;
-}
-
-.css-8xcdch {
-  margin: auto auto auto 30px;
-  transition: transform 500ms ease 0s;
-  transform: rotate(-90deg);
 }
 
 .nav-footer-container {
