--- a/home.css
+++ b/home.css
@@ -11,10 +11,21 @@ body {
   grid-gap: 10px;
   border-bottom: 1px solid #e2e2e2;
   padding: 4px 15px 2px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
 }
 
 #profile {
   display: none;
+}
+
+.cen {
+  text-align: center;
+}
+.mar{
+  margin-left: 300px;
 }
 
 a {
@@ -423,7 +434,20 @@ figure {
 }
 
 .icons {
-  min-width: 120px;
+  font-size: 14px;
+  display: flex;
+  justify-content: left;
+}
+
+.icons > i {
+  vertical-align: middle;
+  text-align: center;
+  border-radius: 50%;
+  margin: 10px;
+  width: 20px;
+  height: 18px;
+  background-color: rgb(231, 230, 230);
+  padding: 5px 2px 2px 2px;
 }
 
 .article-body {
@@ -1042,9 +1066,10 @@ ul {
 
 .exp-button {
   margin: auto 300px auto auto;
-  font-family: "Dela Gothic One", cursive;
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 15px;
+  line-height: 17px;
 }
 
 .css-8xcdch {
